Method POST and adding components
